fixed spacing on footer

--- a/ghi/app/src/styles.css
+++ b/ghi/app/src/styles.css
@@ -53,8 +53,8 @@ footer {
     top: 100%;
     bottom: 0;
     width: 100vw;
-    padding-top: auto;
-
+    padding-top: 1em;
+    padding-bottom: 1em;
 }
 
 #footerColor {
